Fix darkmode bug

--- a/pages/index.html.slim
+++ b/pages/index.html.slim
@@ -32,7 +32,7 @@ layout: body
 
   .flex.flex-col.gap-y-12.mx-auto.max-w-3xl
     hgroup.text-center.flex.flex-col.gap-y-2.mb-12
-      h2.text-4xl.font-extrabold.text-brown-900 All the features you need
+      h2.text-4xl.font-extrabold All the features you need
       h3.text-2xl Sitepress is packed with goodies that make building content websites fun and productive
 
     .grid.gap-10.md:grid-cols-2
