Billions to millions

--- a/pages/index.html.slim
+++ b/pages/index.html.slim
@@ -29,7 +29,7 @@ layout: body
 
   .flex.flex-col.gap-y-12.mx-auto.max-w-3xl.border-brown-500.border-y.py-20
     hgroup.text-center.flex.flex-col.gap-y-2
-      h2.text-4xl.font-extrabold Billions and billions of pages served
+      h2.text-4xl.font-extrabold Millions and millions of pages served
       h3.text-2xl Here's a few of the many websites running Sitepress in production
 
     .grid.gap-12.md:grid-cols-3
