Make buttons bigger on hover

--- a/pages/index.html.slim
+++ b/pages/index.html.slim
@@ -94,7 +94,7 @@ layout: body
       h2.text-4xl.font-bold Get started
       h3.text-2xl Setup takes just a few minutes regardless of your choice
     .my-4.flex.flex-col.md:flex-row.gap-x-4.font-semibold.gap-y-6.justify-center.items-center.text-center
-      =link_to "Embed in a Rails App", "/getting-started/rails", class: "min-w-full md:min-w-fit inline-block rounded bg-brown-900 hover:bg-brown-800 text-brown-100 py-4 px-8 dark:outline-1 whitespace-nowrap dark:bg-brown-800 dark:hover:bg-brown-700"
-      =link_to "Build Stand-Alone Website", "/getting-started/static", class: "min-w-full md:min-w-fit inline-block rounded bg-brown-900 hover:bg-brown-800 text-brown-100 py-4 px-8 dark:outline-1 whitespace-nowrap dark:bg-brown-800 dark:hover:bg-brown-700"
+      =link_to "Embed in a Rails App", "/getting-started/rails", class: "min-w-full md:min-w-fit inline-block rounded bg-brown-900 hover:bg-brown-800 text-brown-100 py-4 px-8 dark:outline-1 whitespace-nowrap dark:bg-brown-800 dark:hover:bg-brown-700 hover:scale-105 transition"
+      =link_to "Build Stand-Alone Website", "/getting-started/static", class: "min-w-full md:min-w-fit inline-block rounded bg-brown-900 hover:bg-brown-800 text-brown-100 py-4 px-8 dark:outline-1 whitespace-nowrap dark:bg-brown-800 dark:hover:bg-brown-700 hover:scale-105 transition"
     .flex.flex-row.gap-x-4
       p If you're still not sure #{link_to "read the documentation", "/getting-started/rails", class: "underline"}, #{link_to "look at the source code on Github", "https://github.com/sitepress/sitepress", class: "underline"}, or just stop thinking about it and go for it.
