Add hotwire logo

--- a/pages/index.html.slim
+++ b/pages/index.html.slim
@@ -32,9 +32,10 @@ layout: body
       h2.text-4xl.font-extrabold Millions and millions of pages served
       h3.text-2xl Here's a few of the many websites running Sitepress in production
 
-    .grid.gap-12.md:grid-cols-3
+    .grid.gap-12.md:grid-cols-2.md:mt-8
       =logo image: "logos/polleverywhere.png", url: "https://www.polleverywhere.com/", alt: "Poll Everywhere"
       =logo image: "logos/flyio.svg", url: "https://fly.io/docs", alt: "Fly.io"
+      =logo image: "logos/hotwire.svg", url: "https://hotwire.io", alt: "Hotwire"
       =logo image: "logos/pushpad.svg", url: "https://pushpad.xyz", alt: "Push Pad"
 
   .flex.flex-col.gap-y-12.mx-auto.max-w-3xl
