--- a/pages/index.html.slim
+++ b/pages/index.html.slim
@@ -33,7 +33,7 @@ layout: body
       h3.text-2xl Here's a few of the many websites running Sitepress in production
 
     .grid.gap-12.md:grid-cols-2.md:mt-8
-      =logo image: "logos/polleverywhere.png", url: "https://www.polleverywhere.com/", alt: "Poll Everywhere"
+      =logo image: "logos/polleverywhere.svg", url: "https://www.polleverywhere.com/", alt: "Poll Everywhere"
       =logo image: "logos/flyio.svg", url: "https://fly.io/docs", alt: "Fly.io"
       =logo image: "logos/hotwire.svg", url: "https://hotwire.io", alt: "Hotwire"
       =logo image: "logos/pushpad.svg", url: "https://pushpad.xyz", alt: "Push Pad"
