--- a/pages/project/updates.html.erb
+++ b/pages/project/updates.html.erb
@@ -8,6 +8,6 @@ order: 1
   <div class="flex flex-col not-prose">
     <%= link_to page.title, page.request_path, class: "font-bold text-xl" %>
     <p><%= page.subtitle %></p>
-    <p class="opacity-70">Published <%= page.publish_at.to_date.to_s(:long) %></p>
+    <p class="opacity-70">Published <%= page.publish_at.to_date.to_formatted_s(:long) %></p>
   </div>
 <% end %>
